	  David Lawrence Ramsey.
	- Bracket (brace, parens, etc) matching code by Ken Tyler.  
	  New functions do_find_bracket(), changes to findnextstr(),
	  command is Meta-] (hope you dont mind since I already sold off
	  Meta-O to the MacOS file code Ken...) Fixes to bracket_msg
	  by DLR.
	- Call do_gotopos from do_alt_spell() to keep position
	  consistent when invoking alt speller (DLR).
- cut.c:
  cut_marked_segment()
	- Add magic line when cutting a selection including filebot
	  (discovered by DLR, fixed by DLR & Chris)
- files.c:
  do_writeout()
	- Expanded strings to not use %s and ?: to determine
	  write/append string to be nice to translators.
  new_file()
	- Initialize totsize (DLR).
- nano.c:
  main()
	- Added vars oldcurrent and oldcurrent_x to check whether cursor
	  pos has changed and if so update the pos with -c.
	- Many tweaks and changes from numerics to char equivs
	  (David Lawrence Ramsey).
  do_mouse()
	- Send 27 when the menu item clicked is an alt key seq... The
	  lines aren't lined up since the menu width changed though,
	  this breakage depends on whether the new widths will be kept
	  or not (FEEDBACK!!)
	- Change k based on currslen to allow the new widths in
	  bottombars().
  do_wrap()
	- Fixes for Pico incompatibility in cases 2b and 2c.  
	  (David Lawrence Ramsey).
  global_init()
	- New arg save_cutbuffer, allows cutbuffer to not be lost when
	  using multibuffer.
- nano.texi:
	- corrected the Mouse Toggle section, noticed by Daniel Bonniot.
- rcfile.c:
	- NUM_RCOPTS fix (DLR).
- search.c:
	- Changed search prompt to "Search" followed by a list of
	  bracketed, free-standing modifiers that do not imply a grammar,
	  and the (to replace) string separately.  Hopefully this resolves
	  the i18n problems that this provoked.
- winio.c:
	- Add David Lawrence Ramsey to credits.
  bottombars()
	- Spread out the menu items, feedback definitely needed on this.
  nanogetstr()
	- More key fixes (David Lawrence Ramsey)
- po/nl.po: